# netdoctor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: hero.tape  mtr.tape  scorecard.tape  watch.tape
packaging/: entry.py
scripts/: update-brew-formula.sh
src/netdoctor/: __init__.py  checks.py  cli.py  model.py  render.py  score.py
tests/: test_checks.py  test_diagnose.py  test_parse.py  test_score.py
