[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netdoctor"
version = "0.1.1"
description = "A network health-check CLI that walks the DevOps debugging ladder and tells you which rung broke."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sahil Chalke" }]
keywords = ["devops", "networking", "cli", "diagnostics", "dns", "tcp", "http", "tls"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["rich>=13.0", "certifi>=2024.0"]

[project.urls]
Homepage = "https://github.com/Sahilll15/netdoctor"
Repository = "https://github.com/Sahilll15/netdoctor"
Issues = "https://github.com/Sahilll15/netdoctor/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
build = ["build", "pyinstaller>=6.0"]

[project.scripts]
netdoctor = "netdoctor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/netdoctor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
